--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <h2>Parken</h2>
                     <p>Autos können an der freien Trauung im Wohngebiet geparkt werden. An der Feierlocation auch, oder
                         in folgenden Parkhäusern:</p>
-                    <p><a href="https://www.google.com/maps?q=Parkhaus+am+Marienplatz" target="_blank">Parkhaus am
+                    <p><a href="https://maps.app.goo.gl/khuUGiZG1TzSvhVY9" target="_blank">Parkhaus am
                             Marienplatz</a></p>
                     <p><a href="https://www.google.com/maps?q=Tiefgarage+Südtor" target="_blank">Tiefgarage Südtor</a>
                     </p>
@@ -352,8 +352,6 @@
 
                 <p><a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Ninas+und+Stephans+Hochzeit&dates=20250712/20250713&details=Feiere+mit+uns!&location=Löwenstraße+103+A,+70597+Degerloch"
                         target="_blank">In Google-Kalender speichern</a></p>
-                <p><a href="URL-zur-Datei/NinasUndStephansHochzeit.ics" download="NinasUndStephansHochzeit.ics">In
-                        Kalender speichern (.ics)</a></p>
             </div>
 
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxVwgSbSHr2UR-JkIgNIfPR4PyoWOpVEog0OXQcaCecqMuOA/viewform?usp=header"
